[package]
name = "rust_ethers_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
serde = { version = "^1", features = ["derive"] }
ethers = { version = "1.0.0", features = ["legacy"] }
serde_json = { version = " 1.0.64 ", default-features = false, features = [
  "raw_value"
] }
tokio = { version = "1.18", features = ["macros"] }
eyre = "0.6"